; ModuleID = '/home/carl/AnghaBench/freebsd/sys/nfs/extr_nfs_diskless.c_checkrwsize.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/nfs/extr_nfs_diskless.c_checkrwsize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [43 x i8] c"nfs_parse_options: invalid %s %lu ignored\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i8*)* @checkrwsize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @checkrwsize(i64 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store i64 %0, i64* %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load i64, i64* %4, align 8
  %7 = icmp ule i64 4, %6
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load i64, i64* %4, align 8
  %10 = icmp ule i64 %9, 32768
  br i1 %10, label %15, label %11

11:                                               ; preds = %8, %2
  %12 = load i8*, i8** %5, align 8
  %13 = load i64, i64* %4, align 8
  %14 = call i32 @printf(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0), i8* %12, i64 %13)
  store i32 0, i32* %3, align 4
  br label %16

15:                                               ; preds = %8
  store i32 1, i32* %3, align 4
  br label %16

16:                                               ; preds = %15, %11
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @printf(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
